--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,5 +22,7 @@ jobs:
       working-directory: ./GitHubActions
     - name: Build
       run: dotnet build --no-restore
+      working-directory: ./GitHubActions
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test
+      working-directory: ./GitHubActions
