introdução de teste xunit

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,10 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
       working-directory: ./GitHubActions
-    - name: Test
-      run: dotnet test
-      working-directory: ./GitHubActions
+  tests:
+    name: Unit Testing
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.1.0
+      - run: dotnet test
+      - working-directory: ./GitHubActions
