--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v2.1.0
-      - run: dotnet test
-      - working-directory: ./GitHubActions
+    - uses: actions/checkout@v2.1.0
+    - name: unit testing
+      run: dotnet test
+      working-directory: ./GitHubActions
