--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,6 @@ jobs:
     - name: XUnit Viewer
       uses: AutoModality/action-xunit-viewer@v1.0.1
       with:
-        if: always()
-        name: test output
-        path: artifacts/test
+        results: test-reports
+        output: testreports
         
