--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,9 +26,10 @@ jobs:
     - name: unit testing
       run: dotnet test
       working-directory: ./GitHubActions
-    - name: XUnit Viewer
-      uses: AutoModality/action-xunit-viewer@v1.0.1
-      with:
-        results: test-reports
-        output: testreports
+      
+    #- name: XUnit Viewer
+    #  uses: AutoModality/action-xunit-viewer@v1.0.1
+    #  with:
+    #    results: test-reports
+    #    output: testreports
         
