--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,12 @@ jobs:
     - name: dotnet publish
       run: dotnet publish -c Release -o dotnetcorewebapp
       working-directory: ./GitHubActions
-    
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: './dotnetcorewebapp'
     
     #- name: XUnit Viewer
     #  uses: AutoModality/action-xunit-viewer@v1.0.1
