--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,14 +30,13 @@ jobs:
       run: dotnet test
       working-directory: ./GitHubActions
     - name: dotnet publish
-      run: dotnet publish -c Release -o dotnetcorewebapp
+      run: dotnet publish -c Release
       working-directory: ./GitHubActions
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: './dotnetcorewebapp'
     
     #- name: XUnit Viewer
     #  uses: AutoModality/action-xunit-viewer@v1.0.1
