--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,14 +30,15 @@ jobs:
       run: dotnet test
       working-directory: ./GitHubActions
     - name: dotnet publish
-      run: dotnet publish -c Release -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
-      working-directory: ./GitHubActions
+      run: |
+        cd src/
+        dotnet publish -c Release --output '../published-app'
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
+        package: ./published-app
     #- name: XUnit Viewer
     #  uses: AutoModality/action-xunit-viewer@v1.0.1
     #  with:
