--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: PipelineMVC
 
 env:
   AZURE_WEBAPP_NAME: githubactionswebapp   
-  AZURE_WEBAPP_PACKAGE_PATH: 'build'
+  AZURE_WEBAPP_PACKAGE_PATH: '.published'
 on:
   push:
     branches: [ main ]
@@ -30,15 +30,14 @@ jobs:
       run: dotnet test
       working-directory: ./GitHubActions
     - name: dotnet publish
-      run: |
-        cd src/
-        dotnet publish -c Release --output '../published-app'
+      run: dotnet publish -c Release --no-build --output ${{ secrets.AZURE_WEBAPP_PACKAGE_PATH }}
+      working-directory: ./GitHubActions
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ./published-app
+        package: ${{ secrets.AZURE_WEBAPP_PACKAGE_PATH }}
     #- name: XUnit Viewer
     #  uses: AutoModality/action-xunit-viewer@v1.0.1
     #  with:
