--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,13 +24,13 @@ jobs:
       run: dotnet restore
       working-directory: ./GitHubActions
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore -c Release
       working-directory: ./GitHubActions
     - name: unit testing
       run: dotnet test
       working-directory: ./GitHubActions
     - name: dotnet publish
-      run: dotnet publish -c Release --no-build --output ${{ secrets.AZURE_WEBAPP_PACKAGE_PATH }}
+      run: dotnet publish -c Release -o ${{ secrets.AZURE_WEBAPP_PACKAGE_PATH }}
       working-directory: ./GitHubActions
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
