--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
       run: dotnet test
       working-directory: ./GitHubActions
     - name: dotnet publish
-      run: dotnet publish --no-build -c Release -o ./published
+      run: dotnet publish --no-build -c Release
       #run: dotnet publish --no-build -c Release -o ./published
       working-directory: ./GitHubActions
     - name: Deploy to Azure WebApp
