--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,7 +38,7 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package:  ${{ secrets.AZURE_WEBAPP_PACKAGE_PATH}}
+        package:  /home/runner/work/az400acad2020a/az400acad2020a/GitHubActions/WebAppMVC/bin/Release/net5.0/publish/
     #- name: XUnit Viewer
     #  uses: AutoModality/action-xunit-viewer@v1.0.1
     #  with:
