introdução de testes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,7 @@ jobs:
       - name: Build
         run: dotnet build --no-restore -c Release
         working-directory: ./GitHubActions
+      
+      - name: xUnit tests
+        run: dotnet test
+        working-directory: ./GitHubActions
