--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           app-name: ${{env.AZURE_WEBAPP_NAME}}
           publish-profile: ${{secrets.AZURE_WEBAPP_PUBLISH_PROFILE_2}}
-          package: .
+          package: /home/runner/work/az400acad2020a/az400acad2020a/GitHubActions/WebAppMVC/bin/Release/net5.0/publish/
 
 
       
